# QMcu

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
QMcuDebug/: CMakeLists.txt
QMcuDebug/include/QMcu/Debug/: AbstractVariablePlotDataProvider.hpp  AbstractVariableRecorder.hpp  ArrayProxy.hpp  AutoScale.hpp  BufferPlotProvider.hpp  BufferRecorder.hpp  Debugger.hpp  ScrollPlotProvider.hpp  ScrollRecorder.hpp  StLinkProbe.hpp  Type.hpp  Variable.hpp  VariableProxy.hpp  VariableProxyGroup.hpp
QMcuDebug/private/: Logging.hpp  VariantUtils.hpp
QMcuDebug/src/: AbstractVariablePlotDataProvider.cpp  AbstractVariableRecorder.cpp  ArrayProxy.cpp  AutoScale.cpp  BufferPlotProvider.cpp  BufferRecorder.cpp  Debugger.cpp  ScrollPlotProvider.cpp  ScrollRecorder.cpp  StLinkProbe.cpp  Type.cpp  Variable.cpp  VariableProxy.cpp  VariableProxyGroup.cpp
QMcuDebug/src/qml/: AutoScale.qml  BufferRecorderSeries.qml  RubberBand.qml  ScrollRecorderSeries.qml  SimplePlot.qml  VariableComboBox.qml  VariableTree.qml  VariableView.qml
QMcuPlot/: CMakeLists.txt  generate_shaders.py
QMcuPlot/include/QMcu/Plot/: AbstractPlotDataProvider.hpp  AbstractPlotSeries.hpp  BasicRenderer.hpp  CurveInterpolator.hpp  FileIO.hpp  LinePlotSeries.hpp  Plot.hpp  PlotContext.hpp  PlotGrid.hpp  PlotLineSeries.hpp  PlotRenderer.hpp  PlotScene.hpp  PlotSceneItem.hpp
QMcuPlot/include/QMcu/Plot/GL/: IncludeAPI.hpp  Types.hpp
QMcuPlot/include/QMcu/Plot/VK/: Types.hpp  VulkanContext.hpp  VulkanPipelineBuilder.hpp
QMcuPlot/private/: Logging.hpp
QMcuPlot/resources/: resources.qrc
QMcuPlot/shaders/: forward-xy.vert  grid.frag  grid.geom  grid.vert  line-plot-series-double.vert  line-plot-series-float.vert  line-plot-series-i16.vert  line-plot-series-i32.vert  line-plot-series-i8.vert  line-plot-series-u16.vert  line-plot-series-u32.vert  line-plot-series-u8.vert  line-plot-series.frag  line-plot-series_halo.frag  line-plot-series_halo.geom  set-color.frag  stencil.frag  stencil.geom  stencil.vert
QMcuPlot/shaders/qt/: opacitymask.frag
QMcuPlot/src/: AbstractPlotDataProvider.cpp  AbstractPlotSeries.cpp  BasicRenderer.cpp  CurveInterpolator.cpp  FileIO.cpp  LinePlotSeries.cpp  Logging.cpp  Plot.cpp  PlotGrid.cpp  PlotLineSeries.cpp  PlotRenderer.cpp  PlotScene.cpp  PlotSceneItem.cpp
QMcuPlot/src/VK/: VulkanContext.cpp
QMcuPlot/src/qml/: PlayButton.qml  PlotView.qml  PlotZoom.qml
QMcuPlot/templates/shaders/: line-plot-series.vert.jinja2
QMcuPlot/tests/: CMakeLists.txt  SplineEditor.qml  TestCounter.cpp  TestCounter.hpp  TestCounterApp.qml  TestDial.qml  TestGridApp.qml  TestSignal.hpp  TestSignalApp.qml  rhiwindow.cpp  rhiwindow.h  test-runner.cpp  test-scaling.cpp
QMcuPlot/tests/vulkan/: CMakeLists.txt  main.cpp  main.qml  vulkansquircle.cpp  vulkansquircle.h  vulkansquirclerenderer.cpp  vulkansquirclerenderer.h
QMcuUtils/: CMakeLists.txt
QMcuUtils/include/QMcu/Utils/: FileIO.hpp  LogInterceptor.hpp
QMcuUtils/src/: CurveInterpolator.cpp  FileIO.cpp  LogInterceptor.cpp
QMcuUtils/src/qml/: LoggingErrorDialog.qml
QMcuWatch/: CMakeLists.txt
QMcuWatch/include/: Application.hpp
QMcuWatch/qml/: configured-watch.qml  simple-watch.qml
QMcuWatch/src/: main.cpp
QMcuWatch/test/: CounterBufferExample.qml  CounterBuffersExample.qml  CounterExample.qml  CounterPlotExample.qml  counter.cpp  custom.qml  embedded copy.qml  simpleplot.qml  test-config.json
cmake/: Findlldb.cmake  Findstlink.cmake  PythonUtils.cmake  QMcuConfig.cmake.in
